Fix NPE in `MapPanel` caused by mutable speedwalk paths; update tests to verify immutability of collections.